css/styles.css
:root{
    --light-bg: #f2f2f2;
    --light-text: #343a40;
    --light-accent: #d9d9d9;

    --dark-bg: #343a40;
    --dark-text: #f2f2f2;
    --dark-accent: #485159;



}

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 20px;
    background-color: var(--light-bg);
    color: var(--light-text);
}

body.dark-mode {
    background-color: var(--dark-bg);
    color: var(--dark-text);
}
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.upload-button, .close-button{
    background-color: #007BFF;
    color: white;
    padding: 10px 20px;
    text-decoration: none;
    border-radius: 5px;
    cursor: pointer;
}
.upload-button:hover, .close-button:hover {
    background-color: #0056b3;
}

.toggle-dark-mode
{
    background-color: var(--dark-accent);
    color: var(--dark-text);
    padding: 8px;
    text-decoration: none;
    border-radius: 5px;
    cursor: pointer;
}
body.dark-mode .toggle-dark-mode
{
    background-color: var(--light-accent);
    color: var(--light-text);
}

.toggle-dark-mode img
{
    width: 20px;
    height: 20px;
    object-fit: cover;
    display: block;
}

button {
    border: none;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
}
th, td {
    padding: 8px;
    text-align: left;
    border-bottom: 1px solid var(--light-accent);
}

body.dark-mode th, body.dark-mode td
{
    border-bottom: 1px solid var(--dark-accent);
}

th {
    background-color: var(--light-accent);
}
body.dark-mode th
{
    background-color: var(--dark-accent);
}

img {
    width: 200px;
    height: 80px;
    object-fit: cover;
    display: block;
}
.download-button {
    background-color: #4CAF50;
    color: white;
    padding: 10px 20px;
    text-decoration: none;
    border-radius: 5px;
}
.download-button:hover {
    background-color: #45a049;
}

/* Modal styling */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    padding-top: 50px;
}
.modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 600px;
    height: 50%;
}
.form-row {
    width: 100%;
    margin-bottom: 20px;
}
.close-button {
    color: white;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

